# QuiverDM-Live

./: .dockerignore  .env.example  .env.local.example  .env.local.template  .env.production.example  .gitignore  ADMIN_INVITES_GUIDE.md  AGENTS.md  CLAUDE.md  CODEX_AGENT_A.md  CODEX_AGENT_B.md  CODEX_AGENT_C.md  CODEX_AGENT_D.md  CODEX_AGENT_E.md  CODEX_AGENT_MOTION.md  CODEX_CLEANUP.md  CODEX_HOMEBREW_LINKING.md  CODEX_LAZY_DM_WIZARD.md  CODEX_PDF_UI_REDESIGN.md  CODEX_PHASE2_COMFYUI_PLANNING.md  CODEX_PHASE3_CLOUD_FALLBACK_PLANNING.md  CODEX_PHASE4_UI_PLANNING.md  Dockerfile  Dockerfile.worker  IMAGE_SUPPORT_IMPLEMENTATION_PLAN.md  INVITE_CODES.md  LAUNCH_PREPARATION.md  PDF_AND_MARKER_IMPLEMENTATION_ANALYSIS.md  PDF_IMPLEMENTATION_QUICK_REFERENCE.md  PHASE2_DECISIONS.md  QUICK_START.md  QUICK_START_GPU.md  QuiverDM-Master-Document.md  RAILWAY_SETUP.md  README.md  SETUP_CHECKLIST.md  UI_AUDIT.md  WORKFLOW_TEST_LOG.md  docker-compose.prod.yml  docker-compose.yml  (+18 more)
.taskmaster/: config.json  state.json
docs/: LICENSING.md  (+22 more)
scripts/qa-agents/: .gitignore  claude_agent.py  notifier.py  personas.py  pyproject.toml  reporter.py  run.py  server.py  setup_discord.py  smoke_gate.py
scripts/qa-agents/scenarios/: campaign_deep.py  character_builder.py  create_campaign.py  create_npc.py  dm_invite.py  encounter_builder.py  homebrew_create.py  mobile_viewport.py  player_join.py  power_user.py  prep_wizard.py  session_lifecycle.py  upload_pdf.py
scripts/qa-agents/tests/: test_claude_agent.py  test_notifier.py  test_personas.py  test_reporter.py  test_server.py  test_smoke_gate.py
(+2420 files in other folders)
