[project]
name = "qa-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "playwright>=1.50.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
